--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <a class=logo-link href="#home.html">
+            <a class=logo-link href="home.html">
                 <img class="logo" src="img/logo.png" alt="Radline Logo"/>
             </a>
             <ul class="nav-list">
