--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
      <header>
         <nav class="nav-bar">
-            <a class="logo-link" href="home.html">
+            <a class="logo-link" href="index.html">
                 <img class="logo" src="img/logo.png" alt="Radline Logo"/>
             </a>
             <ul class="nav-list">
