first pc commit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="banner-img">
             <img class="banner-img" src="img/world.png" alt="Globe"/>
             <div  class="banner-text"> 
-                <h1> Radline Media </h1>
+                <h1>  edia </h1>
             </div>
         </section>
     </main>
