--- a/about.html
+++ b/about.html
@@ -34,6 +34,12 @@
         </nav>
     </header>
 
+    <main class="about-header">
+                <div  class="about-text"> 
+                    <h1> Spoiler Alert: A Formula 1 Podcast </h1>
+                </div>
+    </main>
+
     <!------End of Nav------>
 
     <div class="col-container">
