Final Laptop Version

--- a/about.html
+++ b/about.html
@@ -34,27 +34,37 @@
         </nav>
     </header>
 
+    <main class="about-header">
+                <div  class="about-text"> 
+                    <h1> Spoiler Alert: A Formula 1 Podcast </h1>
+                </div>
+    </main>
+
     <!------End of Nav------>
 
     <div class="col-container">
         <div class="columns">
-            <img class="col-img" src="img/f1.png" alt="Formula 1 Logo">
-            <p> 
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis quis quasi quidem. Nisi accusantium magnam veritatis hic illum saepe dolore doloremque consectetur maxime illo voluptate ab itaque, iusto nulla reiciendis, odio magni assumenda voluptatibus voluptatum optio ipsam. Magnam neque voluptates cumque ipsa sapiente sit id tempora ad, minus repellat repudiandae, cupiditate totam error iure recusandae ut ea quas nesciunt cum voluptatem, minima consequuntur esse. Asperiores sit illo, minus reiciendis iste atque sapiente consequatur? Laborum, maiores reprehenderit laboriosam tenetur repellat libero!
-            </p>
+            <a class="spoiler-link" href="https://www.formula1.com/">
+                <img class="col-img" src="img/f1.png" alt="Formula 1 Logo">
+            </a>
+            <p2> 
+                    Formula One (also Formula 1 or F1) is the highest class of single-seater auto racing sanctioned by the Fédération Internationale de l'Automobile (FIA) and owned by the Formula One Group. The FIA Formula One World Championship has been one of the premier forms of racing around the world since its inaugural season in 1950. The word "formula" in the name refers to the set of rules to which all participants' cars must conform.[1] A Formula One season consists of a series of races, known as Grands Prix (French for 'grand prizes' or 'great prizes'), which take place worldwide on purpose-built circuits and on public roads.
+            </p2>
         </div>
 
         <div class="columns">
-            <audio class="audio-col" controls src="media/Lightsaber.wav"></audio>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae exercitationem animi doloribus corporis blanditiis corrupti, tenetur vel velit ipsa inventore pariatur laboriosam dolores et temporibus dolorum adipisci facilis ratione quibusdam! Tempora corporis excepturi deserunt, ea distinctio omnis sed, delectus sunt voluptatibus totam perferendis labore assumenda eius minus id consectetur rerum repudiandae, fugiat hic accusamus? Quo et, perferendis reiciendis optio animi commodi distinctio asperiores consequuntur consequatur tenetur natus eius aliquam minima veritatis non nihil itaque perspiciatis repellat autem est numquam. Nostrum.
-            </p>
+            <audio class="audio-col" controls src="media/formula1car.wav"></audio>
+            <div class="audio">
+                <p3>
+               Click play to hear the sound of a Formula 1 car racing past!
+                </p3>
+            </div>
         </div>
 
         <div class="columns">
             <iframe class="col-video" width="350" height="300" src="https://www.youtube.com/embed/gqhX-ZzPhzo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam est porro officia rerum eius ex cum a eveniet harum debitis! Nesciunt esse veniam aperiam dicta aut eligendi ad minima adipisci suscipit reprehenderit exercitationem magni obcaecati et repellat, consequuntur vitae unde.
+               Here is the controversial video of Hamilton and Vettel from the Canadian Grand Prix a couple weeks back. This event led to an unfortunate penalty to Vettel who ended up losing the race because of it. Ultimately allowing Lewis Hamilton to take yet another 2019 Grand Prix Victory.
             </p>
         </div>
     </div>
